apps/freeroom/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freeroom
  namespace: freeroom
spec:
  selector:
    app: freeroom
  ports:
    - port: 80
      targetPort: 3000
